--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sqflite: ^1.1.6+1
+  intl: 0.15.8
+  fluttertoast: ^3.1.0
 
 dev_dependencies:
   flutter_test:
